Fixing mobile spacing

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -207,6 +207,7 @@ button{
 
 .blog{
   max-width: 800px;
+  padding: 20px;
 }
 
 @media screen and (min-width: 700px){
